fix: HA status hidden by `tn-icon`
the HA status strings `(Active)` or `(Standby)` were being smushed by
the new `tn-icon`. this removes the `min-height` CSS directive for the
product image placeholder, which was causing the status text to clip.

--- a/src/app/pages/dashboard/widgets/system/common/product-image/product-image.component.scss
+++ b/src/app/pages/dashboard/widgets/system/common/product-image/product-image.component.scss
@@ -10,7 +10,6 @@
 
   .product-image-placeholder {
     display: flex;
-    min-height: 100px;
     min-width: 150px;
     overflow: hidden;
     place-content: center;
